# algobench-sdk

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  release.yaml
algobench/: __init__.py  api_client.py  decorator.py  file_handling.py  validation.py
algoworkbench/: __init__.py  dependency_finding.py  wrappers.py
examples/: knapsack.py  max_clique.py
tests/: e2e.py  e2e_env.py  test_api_client.py  test_decorator.py  test_e2e.py  test_file_handling.py  test_validation.py  test_wrappers.py
