[tool.poetry]
name = "algobench"
version = "0.1.0"
description = "Supercharging your algorithm development"
authors = ["Julius"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
dill = "^0.3.9"
requests = "^2.32.3"
pydantic = "^2.11.1"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
